packages/docsearch-theme-light/src/index.css
:root {
  --algolia-docsearch-primary-color: #5468ff;
  --algolia-docsearch-secondary-color: #5d6494;
  --algolia-docsearch-title-color: #232533;
  --algolia-docsearch-subtitle-color: rgba(93, 100, 148, 0.7);
}

.algolia-docsearch * {
  box-sizing: border-box;
}

.algolia-docsearch a {
  text-decoration: none;
}

/* Form */

.algolia-docsearch-form {
  align-items: center;
  border-bottom: 1px solid rgba(197, 201, 224, 0.4);
  display: flex;
  margin: 0;
  padding: 0 1rem;
  position: relative;
}

.algolia-docsearch-input {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  font: inherit;
  min-height: 4rem;
  outline: none;
  padding: 1rem;
  width: 100%;
}

.algolia-docsearch-input::-webkit-search-decoration,
.algolia-docsearch-input::-webkit-search-cancel-button,
.algolia-docsearch-input::-webkit-search-results-button,
.algolia-docsearch-input::-webkit-search-results-decoration {
  display: none;
}

.algolia-docsearch-magnifierLabel,
.algolia-docsearch-reset,
.algolia-docsearch-loadingIndicator {
  color: var(--algolia-docsearch-secondary-color);
  height: 64px;
}

.algolia-docsearch-magnifierLabel,
.algolia-docsearch-loadingIndicator {
  width: 2rem;
}

.algolia-docsearch-magnifierLabel,
.algolia-docsearch--stalled .algolia-docsearch-loadingIndicator {
  display: flex;
  align-items: center;
  justify-content: center;
}

.algolia-docsearch-loadingIndicator,
.algolia-docsearch--stalled .algolia-docsearch-magnifierLabel {
  display: none;
}

.algolia-docsearch-reset {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: none;
  cursor: pointer;
}

.algolia-docsearch-reset[hidden] {
  display: none;
}

.algolia-docsearch-reset:focus {
  outline: none;
  color: var(--algolia-docsearch-primary-color);
}

.algolia-docsearch-magnifierLabel svg,
.algolia-docsearch-loadingIndicator svg {
  height: 18px;
  width: 18px;
}

.algolia-docsearch-reset svg {
  height: 10px;
  width: 10px;
}

/* Dropdown */

.algolia-docsearch-dropdown {
  background: linear-gradient(
    0deg,
    rgb(245, 245, 250) 0%,
    rgb(255, 255, 255) 100%
  );
  border-radius: 6px;
  height: 100%;
  overflow: scroll;
  -ms-overflow-style: none; /* IE 10+ */
  position: absolute;
  scrollbar-width: none; /* Firefox */
  width: 100%;
}

@media (min-width: 640px) {
  .algolia-docsearch-dropdown {
    box-shadow: 0px 2px 4px 0px rgba(93, 100, 148, 0.2),
      0px 5px 15px 0px rgba(37, 44, 97, 0.15);
    height: auto;
    margin-top: 1rem;
    max-height: 564px;
    max-width: 532px;
  }
}

.algolia-docsearch-dropdown::-webkit-scrollbar {
  display: none; /* Chrome and Safari */
}

.algolia-docsearch-dropdown ul,
.algolia-docsearch-dropdown li {
  list-style: none;
  margin: 0;
  padding: 0;
}

.algolia-docsearch-dropdown-container {
  position: relative;
}

.algolia-docsearch-results {
  height: calc(100% - 115px);
  padding: 1.5rem;
}

@media (min-width: 640px) {
  .algolia-docsearch-dropdown {
    height: auto;
  }
}

/* Items */

/* .algolia-docsearch-item::after {
  background: linear-gradient(
    -90deg,
    rgba(197, 201, 224, 0) 0%,
    rgb(197, 201, 224) 51%,
    rgba(197, 201, 224, 0) 100%
  );
  content: '';
  display: block;
  height: 1px;
  margin: 1.5rem 0;
  width: 484px;
} */

.algolia-docsearch-item {
  padding-bottom: 1rem;
}

.algolia-docsearch-item-header {
  color: var(--algolia-docsearch-secondary-color);
  font-size: 0.875rem;
  font-weight: bold;
  letter-spacing: 0.078125rem;
  line-height: 1.2rem;
  margin: 0 0 0.5rem 0;
  text-transform: uppercase;
}

.algolia-docsearch-item-body {
  border-radius: 0.1875rem;
  display: block;
  margin: 0.5rem 0;
  padding: 0.5rem 0;
}

li[aria-selected='true'] .algolia-docsearch-item-body,
.algolia-docsearch-item-body--active {
  background-color: rgba(218, 219, 234, 0.4);
  border-radius: 0.1875rem;
  margin: 0.5rem -1rem;
  padding: 0.5rem 1rem;
}

.algolia-docsearch-item-body-title {
  color: var(--algolia-docsearch-title-color);
  font-size: 0.875rem;
  font-weight: normal;
  letter-spacing: -0.009375rem;
  line-height: 1rem;
  margin: 0 0 0.1875rem 0;
}

.algolia-docsearch-item-body-subtitle {
  color: var(--algolia-docsearch-subtitle-color);
  font-size: 0.625rem;
  font-weight: bold;
  letter-spacing: 0.078125rem;
  line-height: 1rem;
  margin: 0;
  text-transform: uppercase;
}

.algolia-docsearch-item-body-paragraph {
  color: rgba(0, 0, 0, 0.5);
  font-size: 0.75rem;
  font-weight: normal;
  line-height: 1rem;
  margin: 0.1875rem 0 0.5rem 0;
}

/* Highlight */

.algolia-docsearch-results mark {
  background: none;
  color: var(--algolia-docsearch-primary-color);
  font-weight: bold;
}

/* Footer */

.algolia-docsearch-footer {
  align-items: center;
  background-color: #f5f5fa;
  border-top: 1px solid rgba(197, 201, 224, 0.4);
  display: flex;
  height: 55px;
  justify-content: flex-end;
  padding: 1.5rem;
  position: relative;
  width: 100%;
}

@media (min-width: 640px) {
  .algolia-docsearch-footer {
    border: none;
    justify-content: space-between;
  }

  .algolia-docsearch-footer::before {
    background-color: rgba(197, 201, 224, 0.4);
    content: '';
    display: block;
    height: 1px;
    position: absolute;
    top: 0;
    width: calc(100% - 3rem);
  }
}

.algolia-docsearch-commands {
  display: none;
}

@media (min-width: 640px) {
  .algolia-docsearch-commands {
    display: flex;
  }

  .algolia-docsearch-commands li {
    align-items: center;
    display: flex;
  }

  .algolia-docsearch-commands li {
    margin-right: 1rem;
  }

  .algolia-docsearch-commands svg {
    height: 1rem;
    width: 1rem;
  }

  .algolia-docsearch-commands svg + svg {
    margin-left: 0.125rem;
  }

  .algolia-docsearch-commands-description {
    color: var(--algolia-docsearch-secondary-color);
    font-size: 0.75rem;
    letter-spacing: 0;
    margin-left: 0.25rem;
  }
}

/* Logo */

.algolia-docsearch-logo svg {
  height: 1.2rem;
}

